Fix button color in dark mode

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -45,6 +45,7 @@
 
 .heroButton {
   border: 1px solid white;
+  color: #fff;
   margin-bottom: 10px;
 }
 
